# i3-auto-layout

./: .rustfmt.toml  Cargo.toml  README.md
.github/workflows/: main.yml
src/: main.rs
