[package]
name = "i3-auto-layout"
description = "Automatic, optimal tiling for i3wm"
version = "0.2.0"
authors = ["Gregory <gregory.mkv@gmail.com>"]
edition = "2018"
homepage = "https://github.com/chmln/i3-auto-layout"
repository = "https://github.com/chmln/i3-auto-layout"
readme = "README.md"
license = "MIT"

[dependencies]
tokio-i3ipc = "0.11.0"
tokio = { version = "1.0.0", default-features = false, features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0.36"
log = "0.4.11"
flexi_logger = { version = "0.16.2", default-features = false }
tokio-stream = "0.1.0"

[profile.release]
lto = true
opt-level = 3
debug = false
debug-assertions = false
